--- a/MyDapperExtensions/MyDapperExtensions.csproj
+++ b/MyDapperExtensions/MyDapperExtensions.csproj
@@ -8,7 +8,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MyDapperExtensions</Title>
     <PackageProjectUrl>https://github.com/juliotec/MyDapperExtensions</PackageProjectUrl>
-    <Description>A small library that complements Dapper by adding basic CRUD operations (Get, Insert, Update, Delete) for your POCOs. For more advanced query scenarios, Dapper Extensions provides a system predicate. This is an updated version, since the previous one has been abandoned and out of date.</Description>
+    <Description>This is an updated version from DapperExtensions with many fixes that has been ignored, since the previous one has been abandoned and out of date. A small library that complements Dapper by adding basic CRUD operations (Get, Insert, Update, Delete) for your POCOs. For more advanced query scenarios, Dapper Extensions provides a system predicate.</Description>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
 	<VersionPrefix>1.0.2</VersionPrefix>
 	<Authors>Julio Abarca</Authors>
